--- a/_sass/syntax-highlighting.sass
+++ b/_sass/syntax-highlighting.sass
@@ -173,38 +173,38 @@
   color: $color-cyan
 
 .highlight .bp 
-  color: $color-gray
+  color: $color-foreground
 
 .highlight .nb 
-  color: $color-gray
+  color: $color-foreground
 
 .highlight .ni 
-  color: $color-gray
+  color: $color-foreground
 
 .highlight .nn 
-  color: $color-gray
+  color: $color-foreground
 
 .highlight .vc 
-  color: $color-gray
+  color: $color-foreground
 
 .highlight .vg 
-  color: $color-gray
+  color: $color-foreground
 
 .highlight .vi 
-  color: $color-gray
+  color: $color-foreground
 
 .highlight .nv, .highlight .vm 
-  color: $color-gray
+  color: $color-foreground
 
 .highlight .w 
-  color: $color-gray
+  color: $color-foreground
 
 .highlight .nl 
-  color: $color-gray
+  color: $color-foreground
   font-weight: bold
 
 .highlight .nt 
   color: $color-pink
 
 .highlight 
-  color: $color-gray
+  color: $color-foreground
